@@ -44,6 +44,10 @@ Library
 
 - Deprecate the sunaudio module for removal in Python 3.0.
 
+- Issue #3394: zipfile.writestr sets external attributes when passed a
+  file name rather than a ZipInfo instance, so files are extracted with
+  mode 0600 rather than 000 under Unix.
+
 
 What's New in Python 2.6 beta 2?
 ================================
